# xxboost

./: README.md  regression_tree.py  sklearn_test.py  xgboost_model.py
cplus/: a.out  classifier.hpp  forest.hpp  matrix.cpp  matrix.hpp  string_test.cpp  test.cpp  utils.hpp
cplus_rgf/: .gitignore  CMakeCache.txt  CMakeLists.txt  FastRGF.cbp  Makefile  cmake_install.cmake  data.hpp  install_manifest.txt
cplus_rgf/examples/exe1/: run.sh
cplus_rgf/examples/exe1/inputs/: madelon.train_1
cplus_rgf/examples/exe2/: run.sh
cplus_rgf/include/: data.h  data.hpp  discretization.h  discretization.hpp  header.h  header.hpp  mr.h  mr.hpp  utils.h  utils.hpp
cplus_rgf/src/: data.cpp
cplus_rgf/src/base/: CMakeLists.txt  Makefile  cmake_install.cmake  data.cpp  discretization.cpp  utils.cpp
cplus_rgf/src/exe/: CMakeLists.txt  Makefile  cmake_install.cmake  test_dataset  test_dataset.cpp
data/: data.py
prepare/: a.out  credit.data.csv  regression_tree.py  rt_test.py
python/: README.md  gbdt.py  predict_with_prophet.py  regression_tree.py  xgboost_test.py  xxg_test.py
python/prepare/: helloword.cpp
